syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "role.proto";

option go_package = "blog_api/pb";

message User {
    string username = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string phone = 5;
    google.protobuf.Timestamp password_changed_at = 6;
    google.protobuf.Timestamp created_at = 7;
    repeated Role roles = 8;
}