package gapi

import (
	db "blog_api/db/sqlc"
	"blog_api/pb"
	"fmt"

	"google.golang.org/protobuf/types/known/timestamppb"
)

func convertUser(user db.User) *pb.User {
	return &pb.User{
		Username:          user.Username,
		FullName:          fmt.Sprintf("%s %s", user.FirstName, user.LastName),
		Email:             user.Email,
		PasswordChangedAt: timestamppb.New(user.PasswordChangedAt),
		CreatedAt:         timestamppb.New(user.CreatedAt),
	}
}
